# fice-feedback-bot

./: .env.dist  .gitignore  pyproject.toml
bot/: __main__.py  commandsworker.py  config_reader.py
bot/locales/ua/: errors.ftl  strings.ftl
