[project]
name = "fice-feedback-bot"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Volodymyr Klimchuk", email = "klimchuk.volodymyr@lll.kpi.ua" }
]
dependencies = [
    "aiogram>=3.13.0",
    "python-dotenv>=1.0.1",
    "pydantic<=2.9",
    "fluent>=0.10.0",
    "fluent-runtime>=0.4.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/telegram_feedback_bot"]
